// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Live Props 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1xmbnpi"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </button>
</div>
`;

exports[`Storyshots Button.Color Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1xmbnpi"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1vv6r6r"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-5pi6fq"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Color Primary 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-12b5l79"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-9yinmz"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-xyg6mo"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Color Secondary 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-66jk1w"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-d0k9ch"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-u0zo3x"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Shape Circle 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1ge5p2x"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    DEFAULT
  </button>
  <button
    className="css-mg4ugk"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    PRIMARY
  </button>
  <button
    className="css-w23ik4"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Shape Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1xmbnpi"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-12b5l79"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-66jk1w"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Shape Rounded 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-3hzi1f"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    DEFAULT
  </button>
  <button
    className="css-18g564n"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    PRIMARY
  </button>
  <button
    className="css-1cpp59d"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.State Disabled 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1xmbnpi"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-12b5l79"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-66jk1w"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
  <button
    className="css-1vv6r6r"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-9yinmz"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-d0k9ch"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
  <button
    className="css-5pi6fq"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-xyg6mo"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-u0zo3x"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
</div>
`;

exports[`Storyshots Button.State Loading 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-yuc9kh"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-1lucr0h"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-1qrbgt1"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-qnyshu"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-13cyecd"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-rs0bps"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-1cxxkq0"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-nj9cmx"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-4dy55j"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
</div>
`;

exports[`Storyshots Button.Variant Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1xmbnpi"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-12b5l79"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-66jk1w"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Variant Outline 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1vv6r6r"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-9yinmz"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-d0k9ch"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Variant Text 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-5pi6fq"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-xyg6mo"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-u0zo3x"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Checkbox Live Props 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-o5ca3n"
      color="default"
      shape="default"
    />
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Default 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-f9z9cs"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1r87z78"
      color="default"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-t9y9yf"
      color="default"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Primary 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rfrqyw"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1fm4qut"
      color="primary"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1fpuydv"
      color="primary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Secondary 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1f54ji6"
      color="secondary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-gmlotw"
      color="secondary"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-8m07x2"
      color="secondary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Shape Circle 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-t9y9yf"
      color="default"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1fpuydv"
      color="primary"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-8m07x2"
      color="secondary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Shape Default 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-f9z9cs"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rfrqyw"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1f54ji6"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Shape Rounded 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1r87z78"
      color="default"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1fm4qut"
      color="primary"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-gmlotw"
      color="secondary"
      shape="rounded"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.State Controlled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-f9z9cs"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rfrqyw"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1f54ji6"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.State Disabled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-f9z9cs"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rfrqyw"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1f54ji6"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.State Uncontrolled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-f9z9cs"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rfrqyw"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1f54ji6"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Expansion Panel Live Props 1`] = `
<div
  className="css-14973vb"
>
  <header
    className="css-1ixk5r3"
  >
    <h2>
      Expansion Title
    </h2>
    <button
      className="css-1x0umg2"
      color="default"
      disabled={false}
      onClick={[Function]}
      shape="circle"
    >
      <svg>
        plus.svg
      </svg>
    </button>
  </header>
  <section
    className="css-7jhpnj"
    onTransitionEnd={[Function]}
    style={
      Object {
        "height": undefined,
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  </section>
</div>
`;

exports[`Storyshots Radio Live Props 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-jx7de8"
      color="default"
      shape="circle"
    />
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </label>
</div>
`;

exports[`Storyshots Radio.Color Default 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      name="radio"
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-1g6ep1u"
      color="default"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      name="radio"
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-qag0s"
      color="primary"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      name="radio"
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-n162tc"
      color="secondary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Switch Live Props 1`] = `
<div
  className="css-14973vb"
>
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="d6339f70-c33e-438c-b3e0-e6555c8e2ee6"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1c33lry"
    color="default"
    htmlFor="d6339f70-c33e-438c-b3e0-e6555c8e2ee6"
  />
  Change my appearance from 
  <strong>
    "Knobs"
  </strong>
   tab
</div>
`;

exports[`Storyshots Switch.State Controlled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="3e1d0cdc-7351-439a-b930-8710a07acd54"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1ocxwjk"
    color="default"
    htmlFor="3e1d0cdc-7351-439a-b930-8710a07acd54"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="cac4f52e-9597-40d3-8c5f-fca23bafd382"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-17qymiv"
    color="primary"
    htmlFor="cac4f52e-9597-40d3-8c5f-fca23bafd382"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="e7625363-9e4b-4054-abdf-f8c0957eb464"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1dz42om"
    color="secondary"
    htmlFor="e7625363-9e4b-4054-abdf-f8c0957eb464"
  />
</div>
`;

exports[`Storyshots Switch.State Disabled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="10b93ec1-6f72-4451-bc4b-519f56de8f71"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1ocxwjk"
    color="default"
    htmlFor="10b93ec1-6f72-4451-bc4b-519f56de8f71"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="f31d1c69-e25f-4b7f-96e1-696890e37a81"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-17qymiv"
    color="primary"
    htmlFor="f31d1c69-e25f-4b7f-96e1-696890e37a81"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="2a09a6b3-d5a6-46eb-b543-c2aad67cd413"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1dz42om"
    color="secondary"
    htmlFor="2a09a6b3-d5a6-46eb-b543-c2aad67cd413"
  />
</div>
`;

exports[`Storyshots Switch.State Uncontrolled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="39e60055-6952-420b-b3dd-370489bc49e2"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1ocxwjk"
    color="default"
    htmlFor="39e60055-6952-420b-b3dd-370489bc49e2"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="8b877c49-5c1a-4408-8253-5fb5af42b2a2"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-17qymiv"
    color="primary"
    htmlFor="8b877c49-5c1a-4408-8253-5fb5af42b2a2"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="7ea7d407-a330-4dc3-b368-b4fb12ca3d28"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1dz42om"
    color="secondary"
    htmlFor="7ea7d407-a330-4dc3-b368-b4fb12ca3d28"
  />
</div>
`;
